--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
